# SlicerMauritanieUN_FST

./: CMakeLists.txt  README.md
MauritanieGaussianFilter/: CMakeLists.txt  MauritanieGaussianFilter.py
MauritanieGaussianFilter/Resources/UI/: MauritanieGaussianFilter.ui
